[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-cloudfront = "1.35.0"
aws-sdk-s3 = "1.38.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
log = {workspace=true}
new_mime_guess = "4.0.1"
pusha = { git = "https://github.com/schell/pusha.git" }
rxyz = { path = "../rxyz" }
serde = {workspace=true}
serde_yaml = {workspace=true}
snafu = {workspace=true}
tokio = { version = "1", features = ["full"] }
